--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -55,6 +55,7 @@
 }
 
 body {
+  margin-top: 100px;
   background-color: #fff;
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -159,7 +160,6 @@ img {
 
 header {
   width:270px;
-  float:left;
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
 }
@@ -323,34 +323,6 @@ footer {
   }
 }
 
-/* Style the tab buttons */
-.tablink {
-  background-color: #555;
-  color: white;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  font-size: 17px;
-  width: 25%;
-}
-
-/* Change background color of buttons on hover */
-.tablink:hover {
-  background-color: #777;
-}
-
-/* Set default styles for tab content */
-.tabcontent {
-  color: white;
-  display: none;
-  padding: 50px;
+#tabs {
   text-align: center;
 }
-
-/* Style each tab content individually */
-#London {background-color:red;}
-#Paris {background-color:green;}
-#Tokyo {background-color:blue;}
-#Oslo {background-color:orange;}
