--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -54,6 +54,11 @@
        url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.svg#NotoSans') format('svg');
 }
 
+#tabs {
+  width: 100%;
+  margin-bottom: 5%;
+}
+
 body {
   background-color: #fff;
   padding:50px;
